// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Component should match a snapshot 1`] = `<ElTable />`;

exports[`Table Component should match a snapshot for cta content alternate settings 1`] = `
<ElTable
  data-has-call-to-action={true}
  data-has-expandable-action={false}
>
  <TableHeadersRow>
    <TableHeader>
      <Icon
        fontSize="1.2rem"
        icon="settingsSystem"
      />
    </TableHeader>
  </TableHeadersRow>
  <TableRowContainer
    isOpen={false}
    key="0"
  >
    <TableRow>
      <TableCtaTriggerCell
        className="foo-bar"
        icon="homeSystem"
        onClick={[MockFunction]}
      />
    </TableRow>
  </TableRowContainer>
</ElTable>
`;

exports[`Table Component should match a snapshot for expandable content alternate settings 1`] = `
<ElTable
  data-has-call-to-action={false}
  data-has-expandable-action={true}
  data-num-columns-excl-action-col={0}
>
  <TableHeadersRow>
    <TableHeader>
      Some Content
    </TableHeader>
  </TableHeadersRow>
  <TableRowContainer
    isOpen={false}
    key="0"
  >
    <TableRow>
      <TableExpandableRowTriggerCell
        className="foo-bar"
        isOpen={false}
        onClick={[MockFunction]}
      />
    </TableRow>
    <TableExpandableRow
      isOpen={false}
    >
      <p>
        I am the content that is only visible when expanded
      </p>
    </TableExpandableRow>
  </TableRowContainer>
</ElTable>
`;

exports[`Table Component should match a snapshot with full props and cta content 1`] = `
<ElTable
  data-has-call-to-action={true}
  data-has-expandable-action={false}
  data-num-columns-excl-action-col={8}
>
  <TableHeadersRow>
    <TableHeader
      className="el-span2"
      key="Property"
    >
      Property
    </TableHeader>
    <TableHeader
      key="Customer"
    >
      Customer
    </TableHeader>
    <TableHeader
      key="Client A/C"
    >
      Client A/C
    </TableHeader>
    <TableHeader
      key="Description"
    >
      Description
    </TableHeader>
    <TableHeader
      key="Request Date"
    >
      Request Date
    </TableHeader>
    <TableHeader
      key="Amount"
    >
      Amount
    </TableHeader>
    <TableHeader
      key="Payment Status"
    >
      Payment Status
    </TableHeader>
    <TableHeader>
      Some Action
    </TableHeader>
  </TableHeadersRow>
  <TableRowContainer
    isOpen={true}
    key="0"
  >
    <TableRow>
      <TableCell
        className="el-span2"
        darkText={true}
        icon="homeSystem"
        key="0-0"
        narrowLabel="Property"
      >
        Mt Ash Jacket, Brassey Road
      </TableCell>
      <TableCell
        icon="usernameSystem"
        key="1-0"
        narrowLabel="Customer"
      >
        Mr Johnny Corrigan
      </TableCell>
      <TableCell
        key="2-0"
      >
        Alternate Lettings Client Acc
      </TableCell>
      <TableCell
        key="3-0"
      >
        Tenant Payment Request
      </TableCell>
      <TableCell
        key="4-0"
        narrowLabel="Request Date"
      >
        19 Apr 2021
      </TableCell>
      <TableCell
        darkText={true}
        key="5-0"
      >
        £50.00
      </TableCell>
      <TableCell
        key="6-0"
      >
        Not Requested
      </TableCell>
      <TableCtaTriggerCell
        className="foo-bar"
        icon="homeSystem"
        onClick={[MockFunction]}
      />
    </TableRow>
  </TableRowContainer>
</ElTable>
`;

exports[`Table Component should match a snapshot with full props and expandable content 1`] = `
<ElTable
  data-has-call-to-action={false}
  data-has-expandable-action={true}
  data-num-columns-excl-action-col={8}
>
  <TableHeadersRow>
    <TableHeader
      className="el-span2"
      key="Property"
    >
      Property
    </TableHeader>
    <TableHeader
      key="Customer"
    >
      Customer
    </TableHeader>
    <TableHeader
      key="Client A/C"
    >
      Client A/C
    </TableHeader>
    <TableHeader
      key="Description"
    >
      Description
    </TableHeader>
    <TableHeader
      key="Request Date"
    >
      Request Date
    </TableHeader>
    <TableHeader
      key="Amount"
    >
      Amount
    </TableHeader>
    <TableHeader
      key="Payment Status"
    >
      Payment Status
    </TableHeader>
    <TableHeader>
      <Icon
        fontSize="1.2rem"
        icon="settingsSystem"
      />
    </TableHeader>
  </TableHeadersRow>
  <TableRowContainer
    isOpen={true}
    key="0"
  >
    <TableRow>
      <TableCell
        className="el-span2"
        darkText={true}
        icon="homeSystem"
        key="0-0"
        narrowLabel="Property"
      >
        Mt Ash Jacket, Brassey Road
      </TableCell>
      <TableCell
        icon="usernameSystem"
        key="1-0"
        narrowLabel="Customer"
      >
        Mr Johnny Corrigan
      </TableCell>
      <TableCell
        key="2-0"
      >
        Alternate Lettings Client Acc
      </TableCell>
      <TableCell
        key="3-0"
      >
        Tenant Payment Request
      </TableCell>
      <TableCell
        key="4-0"
        narrowLabel="Request Date"
      >
        19 Apr 2021
      </TableCell>
      <TableCell
        darkText={true}
        key="5-0"
      >
        £50.00
      </TableCell>
      <TableCell
        key="6-0"
      >
        Not Requested
      </TableCell>
      <TableExpandableRowTriggerCell
        isOpen={true}
        onClick={[Function]}
      />
    </TableRow>
    <TableExpandableRow
      isOpen={true}
    >
      <p>
        I am the content that is only visible when expanded
      </p>
    </TableExpandableRow>
  </TableRowContainer>
</ElTable>
`;

exports[`Table Component should match a snapshot with varied number columns 1`] = `<ElTable />`;
